<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DBMS</string>
    <string name="action_settings">Settings</string>
    <string name="in_button">新增</string>
    <string name="de_button">刪除</string>
    <string name="up_button">修改</string>
    <string name="sea_button">查詢</string>
    <string name="student_sno">學生座號</string>
    <string name="student_psw">學生密碼</string>
    <string name="in_time">進入時間</string>

</resources>
