<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Main" >

    <TextView
        android:id="@+id/tv_sno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="34dp"
        android:text="@string/student_sno" />

    <EditText
        android:id="@+id/edtext_SNO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv_sno"
        android:layout_marginLeft="17dp"
        android:layout_toRightOf="@+id/tv_sno"
        android:ems="10" />

    <TextView
        android:id="@+id/tv_psw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_sno"
        android:layout_below="@+id/tv_sno"
        android:layout_marginTop="20dp"
        android:text="@string/student_psw" />

    <EditText
        android:id="@+id/edtext_psw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edtext_SNO"
        android:layout_below="@+id/edtext_SNO"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_psw"
        android:layout_below="@+id/tv_psw"
        android:layout_marginTop="22dp"
        android:text="@string/in_time" />

    <EditText
        android:id="@+id/edtext_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv_time"
        android:layout_alignLeft="@+id/edtext_psw"
        android:ems="10" />

    <Button
        android:id="@+id/in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv_time"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="25dp"
        android:text="@string/in_button" />

    <Button
        android:id="@+id/dele_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/up_button"
        android:layout_alignBottom="@+id/up_button"
        android:layout_toRightOf="@+id/up_button"
        android:text="@string/de_button" />

    <Button
        android:id="@+id/up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/in_button"
        android:layout_alignBottom="@+id/in_button"
        android:layout_toRightOf="@+id/in_button"
        android:text="@string/up_button" />

    <Button
        android:id="@+id/sea_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/dele_button"
        android:layout_alignBottom="@+id/dele_button"
        android:layout_toRightOf="@+id/dele_button"
        android:text="@string/sea_button" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/in_button"
        android:layout_below="@+id/in_button"
        android:layout_marginTop="34dp" >

        <TextView
            android:id="@+id/output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

</RelativeLayout>
